Added plugins for releasing library